--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,13 +17,11 @@ a {
   box-sizing: border-box;
 }
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+label {
+  color: $text-light-color;
+  font-weight: 600;
 }
+
 
 .container {
   min-height: 100vh;
@@ -104,4 +102,40 @@ body {
 
 .boldDesc.big {
   padding: 40px;
+}
+
+.textField {
+  font-size: x-large;
+  margin: 10px 20px 20px 20px;
+  height: 2em;
+  width: 500px;
+  color: $primary-color;
+  border-color: $text-light-color;
+  @media(max-width: 500px) {
+    width: 300px;
+  }
+}
+
+.textarea {
+  width: 500px;
+  height: 5em;
+  font-size: large;
+  margin: 10px 20px 0 20px;
+  color: $primary-color;
+  @media(max-width: 500px) {
+    width: 300px;
+  }
+}
+
+.select {
+  margin: 12px;
+  font-size: x-large;
+  margin: 10px 20px 20px 20px;
+  height: 2em;
+  width: 500px;
+  color: $primary-color;
+  border-color: $text-light-color;
+  @media(max-width: 500px) {
+    width: 300px;
+  }
 }
