--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -138,7 +138,6 @@ label {
 
 .textarea {
   width: 500px;
-  height: 5em;
   font-size: 1.8vh;
   margin: 10px 20px 0 20px;
   color: $primary-color;
@@ -173,6 +172,36 @@ label {
   }
 }
 
+.collapse {
+  left: 0;
+}
+
+.alert {
+  opacity: 0.9;
+  font-size: 3vh;
+  z-index: 12;
+  position: relative;
+  min-width: 500px;
+  max-width: 100%;
+  height: 20vh;
+  //bottom: 30px;
+  overflow: auto;
+  @media(min-width: 3800px) {
+    min-width: 15vw;
+    height: 5em;
+  }
+  @media(max-width: 500px) {
+    min-width: 300px;
+  }
+  @media(max-width: 300px) {
+    min-width: 220px;
+  }
+}
+
+.alertMessage {
+  overflow-x: auto;
+}
+
 .nextLink {
   color: $gray-color;
   cursor: pointer;
@@ -182,4 +211,10 @@ label {
 
 .nextLink:hover {
   text-decoration: underline;
+}
+
+.text {
+  margin: 20px auto 20px auto;
+  width: 80%;
+  color: $gray-color;
 }
