--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -66,6 +66,10 @@ label {
   z-index: 12;
 }
 
+.button.disabled {
+  cursor: not-allowed;
+}
+
 .button:hover {
   box-shadow: 0 0 10px rgba(87,38,0,1.0);
 }
@@ -205,7 +209,7 @@ label {
 .nextLink {
   color: $gray-color;
   cursor: pointer;
-  font-size: 1.5vh;
+  font-size: 2vh;
   margin: 5px;
 }
 
@@ -217,4 +221,34 @@ label {
   margin: 20px auto 20px auto;
   width: 80%;
   color: $gray-color;
+}
+
+.textLink {
+  text-decoration: underline;
+}
+
+.popup {
+  text-align: center;
+  width: 100%;
+  padding: 12px;
+  background: $black-color;
+  z-index: 13;
+  position: fixed;
+  bottom: 0;
+  opacity: 0.8;
+  color: $gray-color;
+}
+
+.checkbox {
+  margin: 12px;
+  color: $alert-color;
+  background: $alert-color;
+}
+
+.yellowButton {
+  margin: 12px;
+  cursor: pointer;
+  background: $text-color;
+  border: 2px solid $text-light-color;
+  border-radius: 4px;
 }
