--- a/styles/home/Person.module.scss
+++ b/styles/home/Person.module.scss
@@ -65,7 +65,7 @@
   width: 468px;
   height: 439px;
   position: relative;
-  background: url('../../public/img/home/person_background.png');
+  background: url('../../public/img/home/person_background.webp');
   background-repeat: no-repeat;
 	background-position: center;
   background-size: cover;
