--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -107,14 +107,21 @@ label {
   }
 }
 
+.progress {
+  width: 100%;
+  z-index: 14;
+  position: fixed;
+  top: 0;
+}
+
 .boldDesc.big {
   padding: 40px;
 }
 
 .textField {
-  font-size: 2vh;
+  font-size: 2em;
+  min-height: 2vh;
   margin: 10px 20px 20px 20px;
-  height: 2em;
   width: 500px;
   color: $primary-color;
   border-color: $text-light-color;
@@ -131,7 +138,7 @@ label {
 
 .textarea {
   width: 500px;
-  font-size: 1.8vh;
+  font-size: 1.8em;
   margin: 10px 20px 0 20px;
   color: $primary-color;
   @media(min-width: 3800px) {
@@ -207,6 +214,7 @@ label {
 }
 
 .text {
+  font-size: 1.6vh;
   margin: 20px auto 20px auto;
   width: 80%;
   color: $gray-color;
