--- a/styles/home/Enter.module.scss
+++ b/styles/home/Enter.module.scss
@@ -15,7 +15,7 @@
   z-index: 1; 
   width: 100%;
   height: 50vh;
-  background-image: url("../../public/img/home/send_now_background.jpg");
+  background-image: url("../../public/img/home/sendnow_background.webp");
   background-repeat: no-repeat;
   background-position: center;
   -webkit-background-size: cover !important;
@@ -25,7 +25,7 @@
   background-attachment: fixed;
   position: static;
   @media(max-width: 700px) {
-    background-image: url("../../public/img/home/send_now_background_700.jpg");
+    background-image: url("../../public/img/home/sendnow_background_700.webp");
     background-repeat: no-repeat;
     background-position: center;
     -webkit-background-size: cover !important;
