--- a/styles/home/Header.module.scss
+++ b/styles/home/Header.module.scss
@@ -4,12 +4,12 @@
   height: 100vh;
   width: 100%;
   position: relative;
-  background: url('../../public/img/home/header_background.jpg');
+  background: url('../../public/img/home/header_background.webp');
   background-repeat: no-repeat;
 	background-position: center;
   background-size: cover;
   @media(max-width: 700px) {
-    background: url('../../public/img/home/header_background_700.jpg');
+    background: url('../../public/img/home/header_background_700.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
