--- a/styles/home/OldBrowser.module.scss
+++ b/styles/home/OldBrowser.module.scss
@@ -53,7 +53,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-attachment: fixed;
+    //background-attachment: fixed;
     position: static;
   }
 }
